# jsontopydantic

./: .gitignore  README.md
client/: package-lock.json  package.json
client/public/: index.html
client/scripts/: dev-server.sh
client/src/: App.tsx  index.css  index.scss  index.tsx  serviceWorker.ts
client/src/components/: About.tsx  AppLayout.tsx  EditorLayout.tsx  Navbar.tsx  TranslateOptions.tsx  translateOptions.ts
client/src/lib/: constants.ts
client/src/lib/jsonToPydantic/: JsonToPydantic.ts  index.ts
client/src/lib/jsonToPydantic/models/: BasicRequest.ts  Options.ts  TranslateResponse.ts
client/src/lib/jsonToPydantic/schemas/: $BasicRequest.ts  $Options.ts  $TranslateResponse.ts
client/src/lib/jsonToPydantic/services/: DefaultService.ts  TranslateService.ts
client/src/style/: style.css  style.scss
server/: pyproject.toml
server/app/: main.py
server/app/lib/: codegen.py  dmcg_api.py  generator.py  models.py
server/app/lib/dev/: __init__.py  codegen.py
server/app/lib/templates/: ajv-validation.ts.jinja2
server/app/scripts/scratch/: parse_gen.py
server/tests/: test_main.py
