[tool.poetry]
name = "jsontopydantic"
version = "0.1.0"
description = "[JSON to Pydantic](https://jsontopydantic.com) is a tool that lets you convert JSON objects into Pydantic models."
authors = ["Michael Wooley <william.wooley@motional.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
